# SnapTune

./: .eslintrc.json  .gitignore  README.md  README_CN.md  index.html  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
.cargo/: config  config.toml
.github/workflows/: main.yml
app/: layout.tsx  page.tsx  reducer.ts  utils.ts
app/converter/: layout.tsx  page.tsx  reducer.ts
app/settings/: layout.tsx  page.tsx
components/: chooseFile.tsx  navbar.tsx
src/: App.vue  Layout.vue  main.js  main.ts  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  convert.rs  crop.rs  error.rs  lib.rs  main.rs  optimize.rs  settings.rs  yolo.rs
src-tauri/src/convert/: heif.rs  mod.rs
src-tauri/src/optimize/: error.rs
src-tauri/src/quant/: jpeg.rs  mod.rs  png.rs
src-tauri/testdata/: IMG_0203.HEIC  IMG_3627.HEIC
src-tauri/tests/: optimize_test.rs
src/components/: Model.vue  Navbar.vue  UploadEmpty.vue
src/config/: index.json
src/lib/: proxyData.ts  utils.ts
src/pages/: converter.vue  crop.vue  index.vue  settings.vue
src/route/: index.js
src/router/: index.ts
src/views/: Compression.vue  Convert.vue  Detection.vue  Dpi.vue  Rename.vue  SuperResolution.vue
