[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
image = {version = "0.24"}
anyhow = "1.0.57"
tokio = {version="^1.19", features = ["full"] }
#png 压缩优化器
oxipng = "^5.0"
# compressed JPEG images.
turbojpeg = {version = "0.4.2", features = ["image"] }
libheif-rs = "^0.15"
opencv = "^0.69"
lazy_static = "^1.4.0"
chrono = "^0.4.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[workspace]
members = [
    # "crates/jpegoptim",
    # "crates/jpegoptim-sys",
]
