[package]
name = "SnapTune"
version = "0.2.2"
description = "SnapTune is a image compression tool for macOS/Windows/Linux"
authors = ["kingzcheung@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "SnapTune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
imagequant = "4.3.4"
lodepng = "3.11.0"
turbojpeg = {version = "1.3.0", features = ["image"] }
image = {version = "0.25.6",features = [] }
anyhow = "1.0.97"
infer = "0.19.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2",features = ["full"] }
tauri-plugin-persisted-scope = "2.2.1"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
libheif-rs = { version = "2.0", default-features = false, features = ["v1_17"] }


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
